# ApprovalTests.Python

./: main.py  pyproject.toml
.claude/: date-scrubber-guide.md
.github/workflows/: claude-date-scrubber.yml  claude.yml  test-with-uv.yml
approvaltests/scrubbers/: date_scrubber.py
tests/: test_verify.py
tests/PythonTest/: pytest.ini  test_hiker.py
tests/scrubbers/: test_date_scrubber.test_supported_formats_as_table.approved.md  test_date_scrubber.test_unsupported_format.approved.txt
