[project]
name = "approvaltests-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "allpairspy>=2.5.1",
    "beautifulsoup4>=4.13.4",
    "empty-files>=0.0.9",
    "numpy>=2.3.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "testfixtures>=9.1.0",
    "typing-extensions>=4.14.1",
]
